--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "chart.js": "^4.4.7",
+    "moment": "^2.30.1",
     "next": "13.5.4",
+    "next-pwa": "^5.6.0",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "sass": "^1.83.1"
   },
